--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
-// @import "./scss/utils/narmalize"
-@import "./scss/utils/varibles";
-@import "./scss/components/buttons";
-@import "./scss/base/resets";
+@import "./scss/vendors/narmalize";
 @import "./scss/base/typography";
+@import "./scss/utils/varibles";
+@import "./scss/base/resets";
+@import "./scss/components/buttons";
