--- a/src/scss/utils/_varibles.scss
+++ b/src/scss/utils/_varibles.scss
@@ -51,3 +51,6 @@ $spacing-200: 1.6rem; // 16px
 $spacing-150: 1.2rem; // 12px
 $spacing-100: 0.8rem; // 8px
 $spacing-50: 0.4rem; // 4px
+
+
+$global-font-family:"Public Sans", sans-serif;
