--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import "./scss/vendors/narmalize";
 @import "./scss/base/typography";
-@import "./scss/utils/varibles";
+@import "./scss/utils/variables";
 @import "./scss/base/resets";
 @import "./scss/components/buttons";
